typesafe-builders/tests/ui/reject/field_attr/duplicate.rs
use typesafe_builders::prelude::*;

#[derive(Builder)]
struct Struct {
	#[builder(optional)]
	#[builder(optional)]
	x: u8,
}

fn main() { }
