typesafe-builders/tests/ui/reject/field_attr/duplicate.stderr
error: Duplicate attribute on struct field
 --> tests/ui/reject/field_attr/duplicate.rs:6:2
  |
6 |     #[builder(optional)]
  |     ^^^^^^^^^^^^^^^^^^^^
